# tabpfn-football-predictions

./: .gitignore  BACKTESTS.md  BRAINSTORMING.md  README.md  RULES.md  ablation.py  analyze.py  analyze_backtest.py  backtest.py  baselines.py  draw_models.py  features.py  llm_context.csv  llm_context.jsonl  llm_context_audit.jsonl  main.py  predict.py  pyproject.toml  requirements.txt  sweep_cond_draw.py  sweep_elo_momentum.py  sweep_recent_form.py  train_window.py
.claude/commands/: run-experiment.md
.codex/commands/: run-experiment.md
.codex/skills/run-experiment/: SKILL.md
archive/wc2026_r1r2_20260626/: experiments.jsonl
archive/wc2026_r1r2_20260626/predictions/: 20260626.csv  baseline_20260626.csv  (+4 more)
docs/: llm_context_workflow.md
llm_sources/: 2026-06-28_south_africa_vs_canada.md  2026-06-29_brazil_vs_japan.md  2026-06-29_germany_vs_paraguay.md  2026-06-29_netherlands_vs_morocco.md  2026-06-30_france_vs_sweden.md  2026-06-30_ivory_coast_vs_norway.md  2026-06-30_mexico_vs_ecuador.md  2026-07-01_belgium_vs_senegal.md  2026-07-01_england_vs_dr_congo.md  2026-07-01_united_states_vs_bosnia_and_herzegovina.md  2026-07-02_portugal_vs_croatia.md  2026-07-02_spain_vs_austria.md  2026-07-02_switzerland_vs_algeria.md  2026-07-03_argentina_vs_cape_verde.md  2026-07-03_australia_vs_egypt.md  2026-07-03_colombia_vs_ghana.md  2026-07-18_france_vs_england.md  2026-07-19_spain_vs_argentina.md
prompts/: llm_context_extractor.md
schemas/: llm_context.schema.json
scripts/: generate_llm_context.py
submissions/: submission_exp_llm_context_features_ds12_20260628.csv
