[project]
name = "tabpfn-football-predictions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "tabpfn-client>=0.3.2",
]
